add documentacion a api para cargar company
